Upload and display images correctly

--- a/src/FamilyAlbum/Views/Images/Create.cshtml
+++ b/src/FamilyAlbum/Views/Images/Create.cshtml
@@ -16,8 +16,8 @@
                 dataType: 'json',
                 data: $(this).serialize(),
                 success: function (result) {
-                    var resultMessage = 'You\'ve added a new destination to the database!<br>Id: ' + result.filePath + '<br>City: ' + result.size;
-                    $('#upload-result').html(resultMessage);
+                    var resultMessage = result;
+                    $('#file-path').html(resultMessage);
                 }
             });
         });
@@ -68,7 +68,7 @@
         <div class="form-group">
             <label asp-for="FilePath" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="FilePath" class="form-control" />
+                <input asp-for="FilePath" id="file-path" class="form-control" value="@TempData["Path"]" />
                 <span asp-validation-for="FilePath" class="text-danger" />
             </div>
         </div>
