--- a/src/FamilyAlbum/Views/Families/Edit.cshtml
+++ b/src/FamilyAlbum/Views/Families/Edit.cshtml
@@ -5,6 +5,74 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+@*@<script type="text/javascript">
+    $(document).ready(function () {
+        $('#family-image').submit(function (event) {
+            event.preventDefault();
+            var theForm = $(this).serialize();
+            var theFamilyId = $('#family-id').attr('value');
+            console.log(theFamilyId);
+            console.log(theForm);
+            $.ajax({
+                url: '@Url.Action("Upload")',
+                type: 'POST',
+                dataType: 'json',
+                data: { file: theForm, familyId: "stuff" },
+                success: function (result) {
+                    var resultMessage = result;
+                    $('#file-path').html(resultMessage);
+                }
+            });
+        });
+
+        $("body").on("submit", "#family-image", function (event) {
+            event.preventDefault();
+
+            var fdata = new FormData();
+
+            $('input[name="file"]').each(function(a, b) {
+                var fileInput = $('input[name="file"]')[a];
+                if (fileInput.files.length > 0) {
+                    var file = fileInput.files[0];
+                    fdata.append("file", file);
+                }
+            });
+
+            var theFamilyId = @Model.FamilyId;
+            console.log("familyId: " + theFamilyId);
+            console.log(fdata);
+            $.ajax({
+                url: '/families/DoUpload',
+                type: 'POST',
+                dataType: 'json',
+                processData: false,
+                contentType: false,
+                data: {file: fdata, familyId: theFamilyId},
+                success: function (result) {
+                    var resultMessage = result;
+                    $('#file-path').html(resultMessage);
+                }
+            });
+
+        });
+    });
+</script>*@
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.ajax({
+            type: 'GET',
+            dataType: 'html',
+            url: '@Url.Action("Upload")',
+            success: function (result) {
+                $('#upload-view').html(result);
+                $('form').append("<input type='hidden' id='familyId' name='familyId' value='" + @Model.FamilyId + "' >");
+            }
+        });
+    });
+</script>
+
 <h2>Edit</h2>
 
 <form asp-action="Edit">
@@ -30,9 +98,10 @@
         <div class="form-group">
             <label asp-for="PhotoURL" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="PhotoURL" class="form-control" />
+                <input asp-for="PhotoURL" class="form-control" id="file-path" value="@TempData["Path"]"/>
                 <span asp-validation-for="PhotoURL" class="text-danger" />
             </div>
+            <img src="@TempData["Path"]" height="100" width="100"/>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -41,6 +110,7 @@
         </div>
     </div>
 </form>
+<div id="upload-view"></div>
 
 <div>
     <a asp-action="Index">Back to List</a>
