--- a/src/FamilyAlbum/Views/Images/Create.cshtml
+++ b/src/FamilyAlbum/Views/Images/Create.cshtml
@@ -6,10 +6,11 @@
 }
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script type="text/javascript">
+@*<script type="text/javascript">
     $(document).ready(function () {
-        $('.new-destination').submit(function (event) {
+        $('.new-image').submit(function (event) {
             event.preventDefault();
+            console.log("moo");
             $.ajax({
                 url: '@Url.Action("Upload")',
                 type: 'POST',
@@ -22,7 +23,7 @@
             });
         });
     });
-</script>
+</script>*@
 
 <script type="text/javascript">
     $(document).ready(function () {
@@ -39,7 +40,7 @@
 
 <h2>Create</h2>
 
-<form asp-action="Create">
+<form asp-action="Create" class="new-image">
     <div class="form-horizontal">
         <h4>Image</h4>
         <hr />
