--- a/src/FamilyAlbum/Views/Images/Create.cshtml
+++ b/src/FamilyAlbum/Views/Images/Create.cshtml
@@ -74,6 +74,10 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.Label("Photo Album")
+            @Html.DropDownList("PhotoAlbumId")
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
