--- a/src/FamilyAlbum/Views/Home/Index.cshtml
+++ b/src/FamilyAlbum/Views/Home/Index.cshtml
@@ -7,13 +7,13 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-    @if(Model.Family == null)
+    @if(ViewBag.Family == null)
     {
         <h3>Join a Family</h3>
     }
     else
     {
-        <h3>Member of the @Model?.Family</h3>
+        <h3>Member of the @ViewBag.Family Family</h3>
     }
     <h2>Profile</h2>
     <h3>Welcome back @Model?.FirstName @Model?.LastName</h3>
