Properly display and deliver internal messages

--- a/src/FamilyAlbum/Views/Home/Index.cshtml
+++ b/src/FamilyAlbum/Views/Home/Index.cshtml
@@ -23,6 +23,8 @@
     <a asp-controller="photoalbums">Photo Albums</a>
     <br />
     <a asp-controller="images">Images</a>
+    <br />
+    <a asp-controller="messages">Messages</a>
 }
 else
 {
