--- a/src/FamilyAlbum/Views/Messages/Create.cshtml
+++ b/src/FamilyAlbum/Views/Messages/Create.cshtml
@@ -1,4 +1,4 @@
-@model FamilyAlbum.Models.Message
+@model FamilyAlbum.Models.MessageViewModels.CreateMessageViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -11,14 +11,12 @@
     <div class="form-horizontal">
         <h4>Message</h4>
         <hr />
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
         <div class="form-group">
-            <label asp-for="Sender" hidden class="col-md-2 control-label"></label>
-            <input asp-for="Sender" value="@ViewBag.Sender" />
-        </div>
-        <div class="form-group">
-            <label asp-for="Recipients" class="col-md-2 control-label"></label>
+            <label asp-for="RecipientIds" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <select asp-for="Recipients" class="form-control" asp-items="@(new SelectList(ViewBag.Members, ViewBag.Members, "FirstName"))"></select>
+                <select asp-for="RecipientIds" class="form-control" asp-items="ViewBag.Members"></select>
             </div>
         </div>
         <div class="form-group">
@@ -28,20 +26,11 @@
                 <span asp-validation-for="Title" class="text-danger" />
             </div>
         </div>
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Body" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <textarea asp-for="Body" class="form-control"></textarea>
                 <span asp-validation-for="Body" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <div class="checkbox">
-                    <input asp-for="Read" />
-                    <label asp-for="Read"></label>
-                </div>
             </div>
         </div>
         <div class="form-group">
