--- a/src/FamilyAlbum/Views/Messages/Index.cshtml
+++ b/src/FamilyAlbum/Views/Messages/Index.cshtml
@@ -30,25 +30,31 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Body)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PostTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Read)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MessageId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MessageId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MessageId">Delete</a>
-            </td>
-        </tr>
-}
+    @foreach (var recipient in item.Recipients)
+    {
+        @if (recipient.ApplicationUserId == ViewBag.CurrentUserId)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Body)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PostTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Read)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.MessageId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MessageId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MessageId">Delete</a>
+                </td>
+            </tr>
+            }
+        }
+    }
     </tbody>
 </table>
