Create family/posts view and fix a family id bug in posts

--- a/src/FamilyAlbum/Views/Home/Index.cshtml
+++ b/src/FamilyAlbum/Views/Home/Index.cshtml
@@ -32,6 +32,9 @@
     <a asp-controller="messages">Messages</a>
     <br />
     <a asp-controller="posts">Posts</a>
+    <br />
+    <a asp-controller="posts" asp-action="FamilyPosts">Family Posts</a>
+
 
 }
 else
