--- a/src/FamilyAlbum/Views/Home/Index.cshtml
+++ b/src/FamilyAlbum/Views/Home/Index.cshtml
@@ -34,6 +34,9 @@
     <a asp-controller="posts">Posts</a>
     <br />
     <a asp-controller="posts" asp-action="FamilyPosts">Family Posts</a>
+    <br />
+    <a asp-controller="photoalbums" asp-action="UserAlbums">User Albums</a>
+
 
 
 }
