Fix family photo album association bug and add family album view

--- a/src/FamilyAlbum/Views/Home/Index.cshtml
+++ b/src/FamilyAlbum/Views/Home/Index.cshtml
@@ -36,6 +36,9 @@
     <a asp-controller="posts" asp-action="FamilyPosts">Family Posts</a>
     <br />
     <a asp-controller="photoalbums" asp-action="UserAlbums">User Albums</a>
+    <br />
+    <a asp-controller="photoalbums" asp-action="FamilyAlbums">Family Albums</a>
+
 
 
 
