--- a/src/FamilyAlbum/Views/PhotoAlbums/FamilyAlbums.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/FamilyAlbums.cshtml
@@ -1,11 +1,11 @@
 @model IEnumerable<FamilyAlbum.Models.PhotoAlbum>
 
 @{
-    ViewData["Title"] = "UserAlbums";
+    ViewData["Title"] = "FamilyAlbums";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>UserAlbums</h2>
+<h2>FamilyAlbums</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
