--- a/src/FamilyAlbum/Views/PhotoAlbums/Upload.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Upload.cshtml
@@ -1,8 +1,16 @@
-﻿
+﻿@{ 
+    Layout = null;
+}
+<h4>Upload an image using this form</h4>
 <form method="post" enctype="multipart/form-data" class="new-file" asp-action="Upload">
     <div class="form-group">
         <div class="col-md-10">
-            <p>Upload a file using this form:</p>
+            <label>Image Name</label>
+            <input type="text" name="name" />
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-10">
             <input type="file" name="file" />
         </div>
     </div>
