--- a/src/FamilyAlbum/Views/Families/Index.cshtml
+++ b/src/FamilyAlbum/Views/Families/Index.cshtml
@@ -40,10 +40,10 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.FamilyId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.FamilyId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.FamilyId">Delete</a> |
-                @if (!item.Members.Contains(ViewBag.AppUser))
+                <a asp-action="Delete" asp-route-id="@item.FamilyId">Delete</a>
+                @if (ViewBag.Family == null)
                 {
-                    <a asp-action="Join" asp-route-id="@item.FamilyId">Join</a>
+                    <p>| </p><a asp-action="Join" asp-route-id="@item.FamilyId">Join</a>
 
                 }
             </td>
