--- a/src/FamilyAlbum/Views/Shared/_Layout.cshtml
+++ b/src/FamilyAlbum/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         <li><a asp-area="" asp-controller="Posts" asp-action="FamilyPosts">Posts</a></li>
                         <li><a asp-area="" asp-controller="Messages" asp-action="Index">Messages</a></li>
                         <li class="dropdown">
-                            <a asp-controller="PhotoAlbums" asp-action="FamilyAlbums" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Albums<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Albums<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a asp-controller="PhotoAlbums" asp-action="FamilyAlbums">Family Albums</a></li>
                                 <li><a asp-controller="PhotoAlbums" asp-action="UserAlbums">My Albums</a></li>
