--- a/src/FamilyAlbum/Views/Shared/_Layout.cshtml
+++ b/src/FamilyAlbum/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@inject UserManager<ApplicationUser> UserManager
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -24,7 +28,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
-                    @if (User.Identity.IsAuthenticated)
+                    @if (user?.Family != null)
                     {
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -38,7 +42,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    @if (User.Identity.IsAuthenticated)
+                    @if (user?.Family != null)
                     {
                         <li><a asp-area="" asp-controller="Posts" asp-action="FamilyPosts">Posts</a></li>
                         <li><a asp-area="" asp-controller="Messages" asp-action="Index">Messages</a></li>
