Fix navigation links

--- a/src/FamilyAlbum/Views/PhotoAlbums/Add.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Add.cshtml
@@ -56,7 +56,7 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.PhotoAlbumId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="UserAlbums">Back to List</a>
     <br /><br /><br />
     <div id="upload-view" style="display:block"></div>
 </div>
