--- a/src/FamilyAlbum/Views/Posts/Details.cshtml
+++ b/src/FamilyAlbum/Views/Posts/Details.cshtml
@@ -39,7 +39,7 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.PostId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="FamilyPosts">Back to List</a>
 </div>
 <div>
     <h5>Replies:</h5>
