--- a/src/FamilyAlbum/Views/PhotoAlbums/Details.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Details.cshtml
@@ -39,7 +39,7 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.PhotoAlbumId">Edit</a> |
-    <a asp-action="Index">Back to List</a> |
+    <a asp-action="UserAlbums">Back to List</a> |
     <a asp-action="Add" asp-route-id="@Model.PhotoAlbumId">Add a photo</a>
 </div>
 
