--- a/src/FamilyAlbum/Views/PhotoAlbums/Edit.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Edit.cshtml
@@ -50,7 +50,7 @@
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="UserAlbums">Back to List</a>
 </div>
 
 @section Scripts {
