Style post list

--- a/src/FamilyAlbum/wwwroot/css/styles.css
+++ b/src/FamilyAlbum/wwwroot/css/styles.css
@@ -35,3 +35,20 @@
 body {
     background-image: url(../images/parchment-background.jpg);
 }
+
+/*Posts*/
+.reply-badge-text {
+    text-align:right;
+    float:right;
+}
+
+.post-title-text {
+    display: inline;
+    font-size: 90%;
+    font-style: italic;
+}
+
+.panel-heading {
+    font-size: 120%;
+    font-weight: bold;
+}
