--- a/src/FamilyAlbum/Views/Posts/Details.cshtml
+++ b/src/FamilyAlbum/Views/Posts/Details.cshtml
@@ -4,8 +4,14 @@
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <h2>Details</h2>
+
+<div class="panel panel-default">
+    <div class="panel-heading">@Html.DisplayFor(model => model.Title)
+        <p class="post-title-text">-- posted by @Model?.User?.FirstName on @Html.DisplayFor(model => model.PostTime)</p>
+    </div>
+    <div class="panel-body">@Html.DisplayFor(model => model.Body)</div>
+</div>
 
 <div>
     <h4>Post</h4>
