--- a/src/FamilyAlbum/Views/Posts/Details.cshtml
+++ b/src/FamilyAlbum/Views/Posts/Details.cshtml
@@ -5,13 +5,25 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Details</h2>
-
+<h4>Post</h4>
 <div class="panel panel-default">
     <div class="panel-heading">@Html.DisplayFor(model => model.Title)
         <p class="post-title-text">-- posted by @Model?.User?.FirstName on @Html.DisplayFor(model => model.PostTime)</p>
     </div>
     <div class="panel-body">@Html.DisplayFor(model => model.Body)</div>
 </div>
+<a asp-controller="Replies" asp-action="Create" asp-route-postId="@Model.PostId">Reply</a>
+<h4>Replies:</h4>
+
+@foreach (var reply in Model.Replies)
+{
+    <ul class="list-group">
+        <li class="list-group-item">
+            <h4 class="list-group-item-heading">@reply.User?.FirstName replied -- @reply?.ReplyTime</h4>
+            <p class="list-group-item-text">@Html.DisplayFor(modelItem => reply.Body)</p>
+        </li>
+    </ul>
+}
 
 <div>
     <h4>Post</h4>
