--- a/src/FamilyAlbum/Views/Messages/Details.cshtml
+++ b/src/FamilyAlbum/Views/Messages/Details.cshtml
@@ -6,7 +6,11 @@
 }
 
 <h2>Details</h2>
-
+<h4>Message</h4>
+<div id="message-detail">
+    <h3 class="message-detail-title">@Html.DisplayFor(model => model.Title)</h3>
+    <p class="message-detail-body">@Html.DisplayFor(model => model.Body)</p>
+</div>
 <div>
     <h4>Message</h4>
     <hr />
