--- a/src/FamilyAlbum/wwwroot/css/styles.css
+++ b/src/FamilyAlbum/wwwroot/css/styles.css
@@ -52,3 +52,45 @@ body {
     font-size: 120%;
     font-weight: bold;
 }
+
+/*Messages*/
+#messages {
+    display:flex;
+    justify-content: space-around;
+}
+
+.message {
+    background-color: rgb(247, 244, 202);
+    width: 27%;
+    font-family: 'Architects Daughter', cursive;    
+}
+
+.message-sender {
+    font-size: 125%;
+    padding: 2px 2px;
+}
+.message-subject {
+    text-align: center;
+    margin-bottom: 15%;
+    font-size: 135%;
+    font-weight: bold;
+}
+.message-link {
+
+}
+
+.message-new {
+    float: right;
+}
+
+/*Message/Detail*/
+
+#message-detail {
+    height: 800px;
+    width: 50%;
+    background-image: url(../images/albumpage.jpg);
+    background-size: cover;
+    padding-top: 50px;
+    text-align: center;
+    margin: auto;
+}
