Fix reply creation navigation bug

--- a/src/FamilyAlbum/Views/Shared/_Layout.cshtml
+++ b/src/FamilyAlbum/Views/Shared/_Layout.cshtml
@@ -67,7 +67,10 @@
             </div>
         </div>
     </div>
-    <div id="parchment"><h2>@user?.Family?.Name Family</h2></div>
+    @if (user?.Family != null)
+    {
+        <div id="parchment"><h2>@user?.Family?.Name Family</h2></div>
+    }
     <div class="container body-content">
         @RenderBody()
         <hr />
