--- a/src/FamilyAlbum/Views/Replies/Create.cshtml
+++ b/src/FamilyAlbum/Views/Replies/Create.cshtml
@@ -34,7 +34,7 @@
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="FamilyPosts" asp-controller="Posts">Back to List</a>
 </div>
 
 @section Scripts {
