--- a/src/FamilyAlbum/wwwroot/css/styles.css
+++ b/src/FamilyAlbum/wwwroot/css/styles.css
@@ -1,18 +1,18 @@
 ﻿/*Navbar*/
 #nav-main {
-    background-color: rgb(22, 114, 26);
+    background-color: rgb(84, 26, 33);
 }
 
 .navbar .nav > li > a {
-    color: rgb(145, 224, 148);
+    color: rgb(232, 229, 176);
 }
 
 .navbar-inverse .btn-link {
-    color: rgb(145, 224, 148);
+    color: rgb(232, 229, 176);
 }
 
 .navbar-inverse .navbar-brand {
-    color: rgb(145, 224, 148);
+    color: rgb(232, 229, 176);
 }
 
 /*Parchment Header*/
@@ -20,7 +20,7 @@
     background-image: url(../images/parchment.jpg);
     background-size: cover;
     width: 100%;
-    height: 100px;
+    height: 150px;
     text-align: center;
     font-family: 'Rochester', cursive;
 }
@@ -28,6 +28,21 @@
 #parchment h2 {
     margin: 0;
     padding-top: 2%;
+    font-size: 250%;
+}
+
+.portrait-wrapper {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    border-radius: 50%;
+    display: inline-block;
+}
+#family-photo {
+    width: 100%;
+    height: auto;
+    margin-top: -50px;
 }
 
 /*Main Body*/
