--- a/src/FamilyAlbum/Views/Posts/Details.cshtml
+++ b/src/FamilyAlbum/Views/Posts/Details.cshtml
@@ -14,12 +14,28 @@
 </div>
 <a asp-controller="Replies" asp-action="Create" asp-route-postId="@Model.PostId">Reply</a>
 <h4>Replies:</h4>
-
 @foreach (var reply in Model.Replies)
 {
+    TimeSpan timeSpan = DateTime.Now - reply.ReplyTime;
     <ul class="list-group">
         <li class="list-group-item">
-            <h4 class="list-group-item-heading">@reply.User?.FirstName replied -- @reply?.ReplyTime</h4>
+            @if(timeSpan.Days > 0){
+                <h4 class="list-group-item-heading">@reply.User?.FirstName replied -- @timeSpan.Days days ago</h4>
+            }
+            else if (timeSpan.Hours > 0)
+            {
+                <h4 class="list-group-item-heading">@reply.User?.FirstName replied -- @timeSpan.Hours hours ago</h4>
+
+            }
+            else if (timeSpan.Minutes > 0)
+            {
+                <h4 class="list-group-item-heading">@reply.User?.FirstName replied -- @timeSpan.Minutes minutes ago</h4>
+
+            }
+            else
+            {
+                <h4 class="list-group-item-heading">@reply.User?.FirstName replied -- @timeSpan.Seconds seconds ago</h4>
+            }
             <p class="list-group-item-text">@Html.DisplayFor(modelItem => reply.Body)</p>
         </li>
     </ul>
