--- a/src/FamilyAlbum/Views/PhotoAlbums/Edit.cshtml
+++ b/src/FamilyAlbum/Views/PhotoAlbums/Edit.cshtml
@@ -14,17 +14,10 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="PhotoAlbumId" />
         <div class="form-group">
-            <label asp-for="DateEnd" class="col-md-2 control-label"></label>
+            <label asp-for="Name" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="DateEnd" class="form-control" />
-                <span asp-validation-for="DateEnd" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="DateStart" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="DateStart" class="form-control" />
-                <span asp-validation-for="DateStart" class="text-danger" />
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
@@ -35,10 +28,17 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
+            <label asp-for="DateStart" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger" />
+                <input asp-for="DateStart" class="form-control" type="date"/>
+                <span asp-validation-for="DateStart" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="DateEnd" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="DateEnd" class="form-control" type="date"/>
+                <span asp-validation-for="DateEnd" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
